Minor fix for svg logos on mobile

--- a/bootswatch-darkly/less/misc.less
+++ b/bootswatch-darkly/less/misc.less
@@ -33,6 +33,7 @@
 .navbar-logo {
 	height: auto;
 	max-height: 300px;
+	width: 100%;
 }
 
 .navbar-brand {
