--- a/bootswatch-sandstone/css/main.css
+++ b/bootswatch-sandstone/css/main.css
@@ -13027,6 +13027,7 @@ a.jp-shuffle-off:hover {
 .navbar-logo {
   height: auto;
   max-height: 300px;
+  width: 100%;
 }
 .navbar-brand {
   height: auto;
