--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -32,7 +32,8 @@
 // Ensures aspect ratio on default Site Logos
 .navbar-logo {
 	height: auto;
-	max-height: 300px;
+	max-height: 300px; 
+	width: 100%;
 }
 
 .navbar-brand {
