--- a/standard-blue/css/main.css
+++ b/standard-blue/css/main.css
@@ -13030,6 +13030,7 @@ a.jp-shuffle-off:hover {
 .navbar-logo {
   height: auto;
   max-height: 300px;
+  width: 100%;
 }
 .navbar-brand {
   height: auto;
